--- a/OS/메모리구조.md
+++ b/OS/메모리구조.md
@@ -10,7 +10,7 @@
 
 책이나 레퍼런스마다 메모리구조를 나누는 방식이 다양하지만, 공통적이고, 대표적이고, 필수적으로 알아야하는 부분은 Code영역, Data영역, Heap영역, Stack영역임
 
-## 커널 영역
+### 커널 영역
 
 시스템 운영에 필요한 메모리, 사용자는 커널영역에 접근할 수 없음. 커널이 존재하는 곳
 
@@ -33,44 +33,77 @@ CPU는 커널모드와 사용자모드를 왔다갔다하며(시스템 콜 이) 
     - 리눅스로 예를들어 설명하면, 커널은 메모리 관리, 프로세스 관리, 하드웨어와 프로세스 사이에서 인터프리터 역할을 수행하거나 시스템의 호출이나 보안등의 기능을 수행한다. 즉, 리눅스에서(다른 OS는 다를 수 있음) 커널은 하나의 프로세스가 아니라 컴퓨터 하드웨어와 프로세스를 잇는 인터페이스로 봐야한다.
     
 
-## 사용자 영역
+### 사용자 영역
 
 코드영역, 데이터영역, 스택영역, 힙영역 4가지로 나눠진다
 
 ![메모리구조](./image/메모리구조1.png)
 
-### Code 영역(텍스트 영역)
+#### Code 영역(텍스트 영역)
 
 - 실행할 프로그램의 코드가 저장되는 영역 (= 작성한 코드가 binary 형태로 저장되는 공간)
 - **기계어 형태로 저장**, 읽기전용(코드가 변경되면 안되니까!)
 - 실행파일을 구성하는 명령어들이 올라감 (**함수, 제어문, 상수 등이 저장됨**)
 - CPU가 코드영역에 저장된 명령어들을 하나씩 가져가 처리함
 
-### Data 영역
+#### Data 영역
 
 - 프로그램이 실행되는 동안 유지해야 할 데이터(전역변수, 정적변수 등)가 저장되는 공간
     - 전역변수(global variable) : 어떤 변수 영역 내에서도 접근할 수 있는 변수, 함수의 외부에서 선언된 변수, 프로그램 어디서나 접근할 수 있고, 프로그램이 종료되어야만 메모리에서 사라짐. 자동으로 default값(0) 초기화
     - 정적변수(static variable) : 지역변수와 전역변수의 특징을 모두 가짐.
     프로그램이 종료되기전까지 소멸되지않음. default값 초기화
-    - 더 자세하게
+      <details>
+          <summary>더 자세하게</summary>
+          <div markdown = "1">
+            전역변수와 차이점 ⇒ 초기화가 처음 한 번만 진행된다.
+            프로그램이 시작될 때 생성 및 초기화, 프로그램이 끝날때 사라짐.
+            함수의 매개변수로 사용할 수 없음
+            - 정적 지역변수(static local variable) : 블록 내에서만 사용, 한 번 초기화 되면 이후에 함수 호출 시 값의 초기화를 무시함.
+            - 정적 전역변수(static global variable) : 자신이 선언된 소스 파일에서만 사용할 수 있고, 외부에서는 가져다 슬 수 없음.
+            <table>
+                <th></th>
+                <th>지역변수</th>
+                <th>전역변수</th>
+                <th>정적변수</th>
+                <tr>
+                    <td>메모리 생성 시점</td>
+                    <td>중괄호 내부</td>
+                    <td>프로그램 시작</td>
+                    <td> 프로그램 시작</td>
+                </tr>
+                <tr>
+                    <td>메모리 소멸 시점</td>
+                    <td>중괄호 탈출</td>
+                    <td>프로그램 종료</td>
+                    <td>프로그램 종료</td>
+                </tr>
+                <tr>
+                    <td>디폴트 초깃값<br>(초기화하지 않을 시)</td>
+                    <td>쓰레기값 저장</td>
+                    <td>자동 0초기화</td>
+                    <td>자동 0초기화<br>(초기화는 한번만 진행)</td>
+                </tr>
+                <tr>
+                    <td>사용범위</td>
+                    <td>중괄호 내부</td>
+                    <td>프로그램 전체</td>
+                    <td>- 정적 지역변수: 중괄호 내부<br>
+                        - 정적 전역변수: 선언된 소스 파일</td>
+                </tr>
+                <tr>
+                    <td>메모리 할당공간</td>
+                    <td>Stack 영역</td>
+                    <td> Data 영역 (초기화)<br>
+                        BSS 영역 (비초기화)</td>
+                    <td>Data 영역 (초기화)<br>
+                        BSS 영역 (비초기화)</td>
+                </tr>
+            </table>
+            - 프로그램이 시작되면 할당되고 프로그램이 종료되면 소멸됨 
+          </div>
+      </details>
         
-        전역변수와 차이점 ⇒ 초기화가 처음 한 번만 진행된다.
-        프로그램이 시작될 때 생성 및 초기화, 프로그램이 끝날때 사라짐.
-        함수의 매개변수로 사용할 수 없음
-        - 정적 지역변수(static local variable) : 블록 내에서만 사용, 한 번 초기화 되면 이후에 함수 호출 시 값의 초기화를 무시함.
-        - 정적 전역변수(static global variable) : 자신이 선언된 소스 파일에서만 사용할 수 있고, 외부에서는 가져다 슬 수 없음.
-        
-        |  | 지역변수 | 전역변수 | 정적변수 |
-        | --- | --- | --- | --- |
-        | 메모리 생성 시점 | 중괄호 내부 | 프로그램 시작 | 프로그램 시작 |
-        | 메모리 소멸 시점 | 중괄호 탈출 | 프로그램 종료 | 프로그램 종료 |
-        | 디폴트 초깃값(초기화하지 않을 시) | 쓰레기값 저장 | 자동 0초기화 | 자동 0초기화(초기화는 한번만 진행) |
-        | 사용범위 | 중괄호 내부 | 프로그램 전체 | - 정적 지역변수(static local variable): 중괄호 내부- 정적 전역변수(static global variable): 선언된 소스 파일 |
-        | 메모리 할당공간 | Stack 영역 | Data 영역 (초기화)BSS 영역 (비초기화) | Data 영역 (초기화)BSS 영역 (비초기화) |
-        
-- 프로그램이 시작되면 할당되고 프로그램이 종료되면 소멸됨
-
-### Stack 영역
+#### Stack 영역
 
 - 데이터를 일시적으로 저장하는 공간, 프로그램이 자동으로 사용하는 임시 메모리 영역
 - 함수 호출 시 지역변수, 매개변수, 리턴 값 등이 저장되고, 함수가 종료되면 저장된 메모리도 해제됨
@@ -78,51 +111,46 @@ CPU는 커널모드와 사용자모드를 왔다갔다하며(시스템 콜 이) 
 - 컴파일 타임에 의해 결정되기 때문에 무한히 할당할 수 없음
 - PUSH로 저장, POP으로 인출, LIFO(스택) =💡메모리의 높은 주소에서 낮은 주소 방향으로 할당
 
-### Heap 영역
+#### Heap 영역
 
 - 필요에 의해 동적으로 할당되는 영역
 - 프로그래머가 직접 할당(malloc)/해제(calloc)해야하는 공간! 메모리 해제 안하면 메모리 누수 발생
 - 런타임 시 결정되는 영역 → 데이터 크기가 확실하지 않을 때 사용
-- 💡메모리의 낮은 주소에서 높은 주소 방향으로 할당
+- 메모리의 낮은 주소에서 높은 주소 방향으로 할당💡
 - 객체의 참조값(Object Reference), 자바의 class❓와 그 객체, 클로저가 저장되는 공간
 
-<aside>
-💡 Heap 영역과 Stack 영역은 같은 메모리 영역을 공유
 
-- 각 영역이 상대 공간을 침범할 수 있음 = Heap overflow / Stack overflow
-- 스택 영역이 크면 힙 영역이 작아지고 힙 영역이 크면 스택 영역이 작아짐
-</aside>
+> 💡 **Heap 영역과 Stack 영역은 같은 메모리 영역을 공유**
+> - 각 영역이 상대 공간을 침범할 수 있음 = Heap overflow / Stack overflow
+> - 스택 영역이 크면 힙 영역이 작아지고 힙 영역이 크면 스택 영역이 작아짐
 
-- ❓메모리 간 상호작용(Java의 Stack과 Heap)
+
+##### ❓메모리 간 상호작용(Java의 Stack과 Heap)
+###### 1) Stack
+- Heap 영역에 생성된 Object 타입의 데이터 참조값이 할당된다.
+- **원시타입**의 데이터가 값과 함께 할당된다. 원시타입의 데이터는 Heap 메모리에 할당되지 않는다.
+- 원시타입: byte, short, int, long, double, float, boolean, char 타입
+- 지역변수들은 scope에 따른 visibility를 가진다.
+- 각 Thread는 자신만의 stack을 가진다.
     
-    ### 1) Stack
-    
-    - Heap 영역에 생성된 Object 타입의 데이터 참조값이 할당된다.
-    - ***원시타입***의 데이터가 값과 함께 할당된다. 원시타입의 데이터는 Heap 메모리에 할당되지 않는다.
-    - 원시타입: byte, short, int, long, double, float, boolean, char 타입
-    - 지역변수들은 scope에 따른 visibility를 가진다.
-    - 각 Thread는 자신만의 stack을 가진다.
-    
-    ### 2) Heap
-    
-    - Heap 영역에는 주로 긴 생명주기를 가지는 데이터들이 저장된다(대부분의 객체는 크기가 크고 서로 다른 코드블럭에서 공유되는 경우가 많다.).
-    - 애플리케이션의 모든 메모리 중 stack에 있는 데이터를 제외한 부분이라고 보면 된다.
-    - 모든 Object 타입(Integer, String, ArrayList, ...)의 참조값은 데이터 타입과 함꼐 heap 영역에 생성된다.
-    - 자바에서 Wrapper class에 해당하는 Integer, Character, Byte, Boolean, Long, Double, Float, Short 클래스는 모두 Immutable이다. Wrapper class는 아니지만 String 클래스 역시 Immutable하므로 heap에 있는 같은 오프젝트를 레퍼런스하고 있더라도 새로운 연산이 적용되는 순간 새로운 객체가 heap에 재할당된다. 새로운 객체가 heap에 할당되더라도 stack에서 이를 참조하지 않으면 가비지 컬렉션의 대상이 된다.
-    - 스레드의 개수와 관계없이 단 하나의 heap 영역만 존재한다.
-    - Heap 영역에 있는 객체들을 가리키는 참조 변수는 stack에 올라가게 된다(위의 0-3) 참고).
+###### 2) Heap    
+- Heap 영역에는 주로 긴 생명주기를 가지는 데이터들이 저장된다(대부분의 객체는 크기가 크고 서로 다른 코드블럭에서 공유되는 경우가 많다.).
+- 애플리케이션의 모든 메모리 중 stack에 있는 데이터를 제외한 부분이라고 보면 된다.
+- 모든 Object 타입(Integer, String, ArrayList, ...)의 참조값은 데이터 타입과 함꼐 heap 영역에 생성된다.
+- 자바에서 Wrapper class에 해당하는 Integer, Character, Byte, Boolean, Long, Double, Float, Short 클래스는 모두 Immutable이다. Wrapper class는 아니지만 String 클래스 역시 Immutable하므로 heap에 있는 같은 오프젝트를 레퍼런스하고 있더라도 새로운 연산이 적용되는 순간 새로운 객체가 heap에 재할당된다. 새로운 객체가 heap에 할당되더라도 stack에서 이를 참조하지 않으면 가비지 컬렉션의 대상이 된다.
+- 스레드의 개수와 관계없이 단 하나의 heap 영역만 존재한다.
+- Heap 영역에 있는 객체들을 가리키는 참조 변수는 stack에 올라가게 된다(위의 0-3) 참고).
 
-### 버퍼 오버플로우 (공격)
+###### 3) 버퍼 오버플로우 (공격)
 
-힙/스택 모두 오버플로우가 발생하면 잘못된 데이터값을 읽는 등의 문제가 발생할 수 있음.
-
+힙/스택 모두 오버플로우가 발생하면 잘못된 데이터값을 읽는 등의 문제가 발생할 수 있음.  
 이 취약점을 이용해 인가되지 않은 메모리 영역을 침범하여 루트권한을 탈취하는 등 보안문제 발생
 
-- Heap buffer overflow ([https://m.blog.naver.com/PostView.naver?isHttpsRedirect=true&blogId=2000sky2&logNo=220626020503](https://m.blog.naver.com/PostView.naver?isHttpsRedirect=true&blogId=2000sky2&logNo=220626020503))
+- **Heap buffer overflow** ([https://m.blog.naver.com/PostView.naver?isHttpsRedirect=true&blogId=2000sky2&logNo=220626020503](https://m.blog.naver.com/PostView.naver?isHttpsRedirect=true&blogId=2000sky2&logNo=220626020503))
 
 ![힙 오버플로우](./image/메모리구조2_힙오버플로우.png)
 
-- Stack buffer overflow
+- **Stack buffer overflow**
     - 스택에 할당된 메모리 주소를 넘치게 사용하면 메모리를 다루는 데 오류가 발생하여 잘못된 동작을 하게되고 프로그램의 취약점이됨.
     - 대표적인 공격 방식 : NOP썰매 공격과 환경 변수 공격
     - 방어방식  유형 ([https://ko.wikipedia.org/wiki/스택_버퍼_오버플로](https://ko.wikipedia.org/wiki/%EC%8A%A4%ED%83%9D_%EB%B2%84%ED%8D%BC_%EC%98%A4%EB%B2%84%ED%94%8C%EB%A1%9C))
@@ -133,21 +161,14 @@ CPU는 커널모드와 사용자모드를 왔다갔다하며(시스템 콜 이) 
 
 > 일단은 여기까지만 준비했는데, 주로 JAVA질문에서 많이 나오는 영역이니 GC내용도 추가로 함께 적으면 좋을 것 같음 **→ 시간 남으면 자바 부분에서 다루기**
 > 
-
 ---
+
 
 ## 면접 예상질문
-
-<aside>
-❓ Stack과 Heap의 차이점?(특히 자바에서)
+- Stack과 Heap의 차이점?(특히 자바에서)
 - GC(Garbage Collecter)란? ([https://beforb.tistory.com/6](https://beforb.tistory.com/6))
-
-자바의 메모리 영역에 대해 설명해주세요?
+- 자바의 메모리 영역에 대해 설명해주세요?
 - 각 메모리 영역이 할당되는 시점은 언제 인가요?([https://dev-coco.tistory.com/153](https://dev-coco.tistory.com/153))
-
-</aside>
-
----
 
 ## 출처
 
