--- a/OS/프로세스계층구조_고아좀비프로세스_기아현상.md
+++ b/OS/프로세스계층구조_고아좀비프로세스_기아현상.md
@@ -5,6 +5,7 @@
 프로세스가 실행도중 시스템 호출을 통해 다른 프로세스를 생성할 수 있음.
 
 계층 구조는 동시에 여러 작업을 하는 다중 프로그래밍 시스템을 가능하게하고 종료된 자원을 회수하는데 유용함.
+(프로세스 종료 후 회수한다 = 메모리 공간을 회수해 다른 프로세스가 사용할 수 있게 한다.)
 
 
 >💡 **용이한 자원회수**
@@ -91,7 +92,10 @@
 
 자신보다 우선순위가 높은 프로세스 때문에 오랫동안 cpu할당을 받지 못하는 것. (결국 나~중에 실행 or 끝까지 실행못하고 소멸)
 
-다중 프로그래밍 시스템에서 프로세스들이 한정된 시스템 자원을 차지하기 위해 경쟁할 때 발생할 수 있다. 
+다중 프로그래밍 시스템에서 프로세스들이 한정된 시스템 자원을 차지하기 위해 경쟁할 때 발생할 수 있다.   
+선점/비선점 스케줄링 상관없이 발생할 수 있다.  [프로세스 스케줄링](https://github.com/psyStudy/CS_study/blob/main/OS/%ED%94%84%EB%A1%9C%EC%84%B8%EC%8A%A4_%EC%8A%A4%EC%BC%80%EC%A4%84%EB%A7%81(Process_Schedulling).md)
+- ex) 비선점방식 중 SJF는 기아현상 발생가능, FIFO는 도착 순서에 따라 할당하므로 발생x
+- ex) 선점 방식 중 MLQ는 기아현상 발생가능, MFQ는 MLQ의 기아현상 보완.
 
 ## 해결방안
 
