--- a/OS/캐시_지역성.md
+++ b/OS/캐시_지역성.md
@@ -1,6 +1,4 @@
-# 캐시, 지역성
-
-# 2. 캐시
+# 캐시
 
 ## A. 개념
 
@@ -10,7 +8,7 @@
 - 하드웨어에 의해 모든 처리가 이뤄진다.
 - 주로 SRAM기반이기 때문에 (상대적으로) SDRAM보다 지연시간이 거의 없다.
     
-    ![기억장치 계층구조](/image/캐시_1_메모리계층구조.png)
+    ![기억장치 계층구조](./image/캐시_1_메모리계층구조.png)
     
 - SRAM vs SDRAM 간단 비교(➡️RAM 종류)
     - SRAM(Static RAM) : 플립플롭으로 이뤄짐, 소비전력⬆️집적도⬇️가격⬆️, 대용량으로 할 필요는 없지만 빠른 속도가 필요할때.
@@ -21,9 +19,9 @@
 1. CPU는 명령어(데이터)를 인출하기 위해 주기억장치보다 캐시 기억장치를 먼저 조사함.
 2. CPU는 캐시에 원하는 데이터가 있는지 조사하고 없으면 캐시는 주기억에서 블록단위로 데이터를 가져옴. 이후 캐시는 워드 단위로 CPU로 데이터 전송
 
-![캐시동작원리](/image/캐시_2_캐시동작원리.png)
+![캐시동작원리](./image/캐시_2_캐시동작원리.png)
 
-1. 캐시는 CPU가 필요로 하는 명령어와 데이터를 가지고 있다가 필요할 때 전송하여 신속하게 처리함. > 참조 지역성 성질 때문
+3. 캐시는 CPU가 필요로 하는 명령어와 데이터를 가지고 있다가 필요할 때 전송하여 신속하게 처리함. > 참조 지역성 성질 때문
 - CPU가 주기억에서 데이터를 읽을 때, 해당 데이터를 포함, 참조지역성에 따라 선택된 많은 데이터를 읽어와 캐시에 미리 Load함.
 - 그러면 다음에 주기억에 접근할걸 캐시에서 불러오므로 메모리 접근에 필요한 지연시간을 크게 줄일 수 있다.
 - 캐시가 가득 차면, 새로운 데이터를 쓰기 위해 일부 데이터를 지우는데, 지울 내용이 CPU에 의해 바뀌어 있다면 같은 SDRAM메모리 주소를 참조하는 다른 CPU와의 캐시 일관성을 위해 데이터를 업데이트
@@ -53,7 +51,7 @@
 (캐시블록비트가 3bit = 메모리 블록 하위 3bit를 인덱스로 사용
 캐시블록 범위는 000(2)~111(2) 이고 00000, 01000, 10000, 등 하위3비트가 000이면 캐시000에 매핑)
     
-    ![직접매핑](/image/캐시_3_직접매핑.png)
+    ![직접매핑](./image/캐시_3_직접매핑.png)
     
 
 ### 2) 연관 매핑(Associative Mapping)
@@ -85,7 +83,7 @@ N개 이상 블록으로 구성된 집합방식 = N-방향 집합 연관 사상
 - 2^5=32메인메모리블록이 2-연관 세트 매핑
 - tag:5bit(각 32개 구분), index : 3bit(캐시가 2^3=8set) , offset:4bit
 
-![세트 연관 매핑](/image/캐시_4_세트연관사상.png)
+![세트 연관 매핑](./image/캐시_4_세트연관사상.png)
 
 ## D. 쓰기(기록) 정책(Write Policy)
 
@@ -128,12 +126,9 @@ N개 이상 블록으로 구성된 집합방식 = N-방향 집합 연관 사상
 - 캐시 실패율(Cache Miss Ratio) : 1 - 캐시 적중률
 - 기억장치 평균접근시간 = 액세스시간 : 캐시 적중률 X 캐시 접근시간 + 캐시 실패율 X 주기억 접근시간
 
-<aside>
-💡 **추가 내용** 
-연관기억장치(Asscociative )
-복수모듈 기억장치 (메모리 인터리빙)
-
-</aside>
+>💡 **추가 내용**   
+>연관기억장치(Asscociative )   
+>복수모듈 기억장치 (메모리 인터리빙)  
 
 ---
 
