--- a/OS/동기화_세마포어_뮤텍스.md
+++ b/OS/동기화_세마포어_뮤텍스.md
@@ -13,7 +13,7 @@
 2개 이상의 프로세스가 공유 자원에 접근해서 실행 결과가 달라지게 될 수 있는 영역
 즉, 프로세스 실행 순서에 따라 결과가 달라질 수 있으므로 임계 영역에서는 **단 하나의 프로세스만 실행**하도록 보장해야 함 
 
-![](https://velog.velcdn.com/images/csstudy/post/915c34d1-afc5-4fea-ad3c-e15e9c62b604/image.png)
+![](./image/synchro_1.png)
 
 - **entry section(진입 영역)** - 임계 영역에 들어가기 위해 요청하는 영역 (동기화 객체가 요구됨)
 - **critical section(임계 영역)** - 데이터의 일관성이 중요하기 때문에 하나의 프로세스만 접근해야 하는 영역
@@ -40,7 +40,7 @@
 
 <br></br>
 ## 뮤텍스 (Mutex)
-![](https://velog.velcdn.com/images/csstudy/post/70d26060-58e2-401b-9af6-41de58ba4a82/image.png)
+![](./image/synchro_2.png)
 
 **임계 영역에 진입하기 위해서는 락을 획득해야 하고, 빠져나올 때는 반드시 락을 반환해야 함**
 뮤텍스 락은 기본적으로 acquire 함수를 통해 락을 획득하고 release 함수를 통해 락을 반환하며, available이라는 변수를 가지고 락의 사용 가능 여부를 표시함 
@@ -53,7 +53,7 @@
 
 <br></br>
 ## 세마포어 (Semaphore)
-![](https://velog.velcdn.com/images/csstudy/post/534a2361-9e24-49f5-b75a-1d754ac2f98b/image.png)
+![](./image/synchro_3.png)
 
 
 - 사용하고 있는 스레드/프로세스의 수를 공통으로 관리하는 하나의 값을 이용해 상호배제를 달성함
@@ -83,8 +83,9 @@
 
 
 <br></br>
+<br></br>
 #### 출처
-https://code-lab1.tistory.com/50
-https://murphymoon.tistory.com/entry/동기화-경쟁-조건Race-Condition-임계-구역Critical-Section-운영체제OS-면접질문-5
-https://heeonii.tistory.com/14
+https://code-lab1.tistory.com/50   
+https://murphymoon.tistory.com/entry/동기화-경쟁-조건Race-Condition-임계-구역Critical-Section-운영체제OS-면접질문-5   
+https://heeonii.tistory.com/14   
 https://chelseashin.tistory.com/40
