--- a/OS/동기화_세마포어_뮤텍스.md
+++ b/OS/동기화_세마포어_뮤텍스.md
@@ -64,23 +64,36 @@
 화장실에는 여러 개의 칸이 있고 화장실 입구에는 현재 화장실의 빈 칸 개수를 보여주는 전광판이 있을 때 
 ```
 
-
 - 세마포어 S는 wait()와 signal()로만 접근이 가능하며, wait()는 S의 값을 감소시키고, signal은 S의 값을 증가시킴 (S가 0이 되면 모든 자원이 사용 중인 것!)
-
-
 - 이진 세마포어는 0과 1 값만 가지기 때문에 뮤텍스와 유사하게 동작하지만, 카운팅 세마포어는 제한 없는 값을 사용함 
 
 
 <br></br>
 ## 뮤텍스와 세마포어의 차이점
 - 뮤텍스는 동기화 대상이 오직 1개일 때만 사용할 수 있지만, 세마포어는 동기화 대상이 1개 이상일 경우에도 사용 가능함
-
-
 - 뮤텍스는 소유하고 있는 스레드 본인만이 뮤텍스 락을 해제할 수 있지만, 세마포어는 세마포어를 소유하지 않은 스레드가 세마포어를 해제할 수 있음 
-
-
 - 뮤텍스는 프로세스의 범위를 가지며 프로세스 종료될 때 자동으로 초기화되지만, 세마포어는 시스템 범위에 걸쳐 있고, 파일 시스템 상의 파일로 존재함 
 
+
+<br></br>
+## 모니터 (Monitor)
+mutex락 혹은 세마포어를 사용할 때에도 타이밍 오류는 여전히 발생할 수 있음  
+ex) wait()과 signal() 연산의 순서가 뒤바뀌는 경우 등
+이러한 오류를 방지하기 위해, **자바에서는** 고급 언어 구조물인 모니터를 제공함 
+
+![](./image/synchro_4.png)
+![](./image/synchro_5.png)
+- **하나의 데이터(객체)마다 하나의 모니터를 결합**할 수 있으며, 모니터는 **결합된 객체가 동시에 두 개 이상의 스레드에 의해 접근할 수 없도록 막는 잠금 기능을 제공함**으로써 동기화를 수행함
+- 자바에서는 synchronized 메소드가 선언된 객체와 synchronized 블럭에 의해 동기화되는 모든 객체에 고유한 모니터가 결합이 되어 동기화 작업을 수행하게 됨 -> wait(), notify(), notifyAll()은 모두 synchronized 블록에만 유의미함 
+
+### 구현
+공유 자원, 공유 자원 접근 함수로 이루어져 있고, 2개의 큐를 가지고 있음 
+- 상호 배타 큐(Mutual Exclusion Queue) - 공유 자원에 하나의 프로세스만 진입하도록 하기 위한 큐로, **공유 자원을 사용하는 스레드**가 존재함
+- 조건 동기 큐(Conditional Synchronization Queue) - **공유 자원의 락이 해제되기를 기다리는 스레드**가 대기하는 큐
+<br></br>
+- wait() - 락을 가진 프로세스가 다른 프로세스에 락을 넘겨준 다음 대기해야 할 때 사용함
+- notify() - 대기하고 있는 프로세스 중 하나를 깨움
+- notifyAll() - 대기하고 있는 프로세스 모두를 깨움 
 
 <br></br>
 <br></br>
@@ -88,4 +101,6 @@
 https://code-lab1.tistory.com/50   
 https://murphymoon.tistory.com/entry/동기화-경쟁-조건Race-Condition-임계-구역Critical-Section-운영체제OS-면접질문-5   
 https://heeonii.tistory.com/14   
-https://chelseashin.tistory.com/40
+https://chelseashin.tistory.com/40   
+https://prefer2.tistory.com/entry/운영체제-동기화-도구들-뮤텍스-세마포어-모니터    
+https://steady-coding.tistory.com/557
