--- a/OS/동기화_세마포어_뮤텍스.md
+++ b/OS/동기화_세마포어_뮤텍스.md
@@ -72,7 +72,10 @@
 ## 뮤텍스와 세마포어의 차이점
 - 뮤텍스는 동기화 대상이 오직 1개일 때만 사용할 수 있지만, 세마포어는 동기화 대상이 1개 이상일 경우에도 사용 가능함
 - 뮤텍스는 소유하고 있는 스레드 본인만이 뮤텍스 락을 해제할 수 있지만, 세마포어는 세마포어를 소유하지 않은 스레드가 세마포어를 해제할 수 있음 
-- 뮤텍스는 프로세스의 범위를 가지며 프로세스 종료될 때 자동으로 초기화되지만, 세마포어는 시스템 범위에 걸쳐 있고, 파일 시스템 상의 파일로 존재함 
+- 뮤텍스는 프로세스의 범위를 가지며 프로세스 종료될 때 자동으로 초기화되지만, 세마포어는 시스템 범위에 걸쳐 있고, 파일 시스템 상의 파일로 존재함
+
++) ThreadLocal은 오직 한 스레드에 의해서 읽고 쓰여질 수 있는 변수, 즉 일반 변수의 수명은 특정 코드 블록 범위 내에서만 유효하지만 스레드로컬 변수는 특정 스레드가 실행하는 모든 코드에서 그 스레드에 설정된 변수 값을 사용할 수 있음
+-> ThreadLocal 변수는 공유 자원이 아님 
 
 
 <br></br>
@@ -84,16 +87,18 @@ ex) wait()과 signal() 연산의 순서가 뒤바뀌는 경우 등
 ![](./image/synchro_4.png)
 ![](./image/synchro_5.png)
 - **하나의 데이터(객체)마다 하나의 모니터를 결합**할 수 있으며, 모니터는 **결합된 객체가 동시에 두 개 이상의 스레드에 의해 접근할 수 없도록 막는 잠금 기능을 제공함**으로써 동기화를 수행함
-- 자바에서는 synchronized 메소드가 선언된 객체와 synchronized 블럭에 의해 동기화되는 모든 객체에 고유한 모니터가 결합이 되어 동기화 작업을 수행하게 됨 -> wait(), notify(), notifyAll()은 모두 synchronized 블록에만 유의미함 
+- 자바에서는 synchronized 메소드가 선언된 객체와 synchronized 블럭에 의해 동기화되는 모든 객체에 고유한 모니터가 결합이 되어 동기화 작업을 수행하게 됨 -> wait(), notify(), notifyAll()은 모두 synchronized 블록에만 유의미함
+- 보통 하나의 프로세스 내에서 다른 스레드 간 동기화를 할 때 사용됨 
 
+<br></br>
 ### 구현
 공유 자원, 공유 자원 접근 함수로 이루어져 있고, 2개의 큐를 가지고 있음 
-- 상호 배타 큐(Mutual Exclusion Queue) - 공유 자원에 하나의 프로세스만 진입하도록 하기 위한 큐로, **공유 자원을 사용하는 스레드**가 존재함
+- 상호 배타 큐(Mutual Exclusion Queue) - 공유 자원에 하나의 스레드만 진입하도록 하기 위한 큐로, **공유 자원을 사용하는 스레드**가 존재함
 - 조건 동기 큐(Conditional Synchronization Queue) - **공유 자원의 락이 해제되기를 기다리는 스레드**가 대기하는 큐
 <br></br>
-- wait() - 락을 가진 프로세스가 다른 프로세스에 락을 넘겨준 다음 대기해야 할 때 사용함
-- notify() - 대기하고 있는 프로세스 중 하나를 깨움
-- notifyAll() - 대기하고 있는 프로세스 모두를 깨움 
+- wait() - 락을 가진 스레드가 다른 스레드에 락을 넘겨준 다음 대기해야 할 때 사용함
+- notify() - 대기하고 있는 스레드 중 하나를 깨움
+- notifyAll() - 대기하고 있는 스레드 모두를 깨움
 
 <br></br>
 <br></br>
