Update 페이지 교체 알고리즘.md

--- a/OS/페이지 교체 알고리즘.md
+++ b/OS/페이지 교체 알고리즘.md
@@ -17,7 +17,7 @@
 
 # 종류
 
-![Untitled](%E1%84%91%E1%85%A6%E1%84%8B%E1%85%B5%E1%84%8C%E1%85%B5%20%E1%84%80%E1%85%AD%E1%84%8E%E1%85%A6%20%E1%84%8B%E1%85%A1%E1%86%AF%E1%84%80%E1%85%A9%E1%84%85%E1%85%B5%E1%84%8C%E1%85%B3%E1%86%B7%20b8d8756395d54688901169e0df2fdeb1/Untitled.png)
+ ![page1.png](./image/page1.png)
 
 ### 시간 기반
 
@@ -25,8 +25,7 @@
 
 : 메모리에 가장 먼저 올라온 페이지를 먼저 내보낸다
 
-![Untitled](%E1%84%91%E1%85%A6%E1%84%8B%E1%85%B5%E1%84%8C%E1%85%B5%20%E1%84%80%E1%85%AD%E1%84%8E%E1%85%A6%20%E1%84%8B%E1%85%A1%E1%86%AF%E1%84%80%E1%85%A9%E1%84%85%E1%85%B5%E1%84%8C%E1%85%B3%E1%86%B7%20b8d8756395d54688901169e0df2fdeb1/Untitled%201.png)
-
+![page2.png](./image/page2.png)
 - 큐로 구현
 - 메모리의 맨 위에 있는 페이지는 가장 오래된 페이지, 새로운 페이지는 항상 맨 아래
 - 메모리가 꽉 차면 맨 위의 페이지가 나가고 나머지 페이지들은 위쪽으로 이동
@@ -48,7 +47,7 @@
     =성공한 페이지를 큐의 맨 뒤로 옮김으로써 기회를 한 번 더 줌
     
 
-![Untitled](%E1%84%91%E1%85%A6%E1%84%8B%E1%85%B5%E1%84%8C%E1%85%B5%20%E1%84%80%E1%85%AD%E1%84%8E%E1%85%A6%20%E1%84%8B%E1%85%A1%E1%86%AF%E1%84%80%E1%85%A9%E1%84%85%E1%85%B5%E1%84%8C%E1%85%B3%E1%86%B7%20b8d8756395d54688901169e0df2fdeb1/Untitled%202.png)
+![page3.png](./image/page3.png)
 
 - 성능
 
@@ -71,7 +70,7 @@ LRU,LFU,NUR > SCR(2차 기회 알고리즘) > FIFO
 - SCR와 차이점 : 원형 큐 사용
 - 대상 페이지를 가리키는 포인터가 큐의 맨 바닥으로 내려가면 다음에는 다시 큐의 처음을 가리키는데, 시계처럼 한 방향으로 돈다
 
-![Untitled](%E1%84%91%E1%85%A6%E1%84%8B%E1%85%B5%E1%84%8C%E1%85%B5%20%E1%84%80%E1%85%AD%E1%84%8E%E1%85%A6%20%E1%84%8B%E1%85%A1%E1%86%AF%E1%84%80%E1%85%A9%E1%84%85%E1%85%B5%E1%84%8C%E1%85%B3%E1%86%B7%20b8d8756395d54688901169e0df2fdeb1/Untitled%203.png)
+![page4.png](./image/page4.png)
 
 - 참조 비트 : 페이지가 참조되지 않았을 때는 0, 호출되었을 때는 1로 지정
 - 변형 비트 : 페이지 내요이 변경되지 않았을 때는 0, 변경되었을 때는 1로 지정
@@ -86,13 +85,13 @@ LRU,LFU,NUR > SCR(2차 기회 알고리즘) > FIFO
     
 - 목적 : (실제 구현 목적보다) 다른 알고리즘과 비교 연구
 
-![Untitled](%E1%84%91%E1%85%A6%E1%84%8B%E1%85%B5%E1%84%8C%E1%85%B5%20%E1%84%80%E1%85%AD%E1%84%8E%E1%85%A6%20%E1%84%8B%E1%85%A1%E1%86%AF%E1%84%80%E1%85%A9%E1%84%85%E1%85%B5%E1%84%8C%E1%85%B3%E1%86%B7%20b8d8756395d54688901169e0df2fdeb1/Untitled%204.png)
+![page5.png](./image/page5.png)
 
 ## 3. LRU(Least Recently Used)
 
 : 가장 오랫동안 사용하지 않은 페이지를 교체
 
-![Untitled](%E1%84%91%E1%85%A6%E1%84%8B%E1%85%B5%E1%84%8C%E1%85%B5%20%E1%84%80%E1%85%AD%E1%84%8E%E1%85%A6%20%E1%84%8B%E1%85%A1%E1%86%AF%E1%84%80%E1%85%A9%E1%84%85%E1%85%B5%E1%84%8C%E1%85%B3%E1%86%B7%20b8d8756395d54688901169e0df2fdeb1/Untitled%205.png)
+![page6.png](./image/page6.png)
 
 ### 구현 방법
 
@@ -101,7 +100,7 @@ LRU,LFU,NUR > SCR(2차 기회 알고리즘) > FIFO
 - LRU 페이지 교체 알고리즘의 가장 간단한 형태
 - 페이지에 접근한 시간을 기록하여 구현
 
-![Untitled](%E1%84%91%E1%85%A6%E1%84%8B%E1%85%B5%E1%84%8C%E1%85%B5%20%E1%84%80%E1%85%AD%E1%84%8E%E1%85%A6%20%E1%84%8B%E1%85%A1%E1%86%AF%E1%84%80%E1%85%A9%E1%84%85%E1%85%B5%E1%84%8C%E1%85%B3%E1%86%B7%20b8d8756395d54688901169e0df2fdeb1/Untitled%206.png)
+![page7.png](./image/page7.png)
 
 <aside>
 💡 LRU 페이지 교체 알고리즘 vs FIFO 페이지 교체 알고리즘
@@ -123,7 +122,7 @@ LRU,LFU,NUR > SCR(2차 기회 알고리즘) > FIFO
 
 : 각 페이지에 일정 크기의 참조 비트를 만들어 사용하는 것
 
-![Untitled](%E1%84%91%E1%85%A6%E1%84%8B%E1%85%B5%E1%84%8C%E1%85%B5%20%E1%84%80%E1%85%AD%E1%84%8E%E1%85%A6%20%E1%84%8B%E1%85%A1%E1%86%AF%E1%84%80%E1%85%A9%E1%84%85%E1%85%B5%E1%84%8C%E1%85%B3%E1%86%B7%20b8d8756395d54688901169e0df2fdeb1/Untitled%207.png)
+![page8.png](./image/page8.png)
 
 <aside>
 💡 참조 비트 쉬프트 방식 vs LFU 페이지 교체 알고리즘
@@ -131,8 +130,7 @@ LRU,LFU,NUR > SCR(2차 기회 알고리즘) > FIFO
 - LFU 페이지 교체 알고리즘은 페이지의 접근 횟수를측정하여 대상 페이지를 선정한다
 - 참조 비트 쉬프트 방식은 참조한 횟수가 아니라, 참조한 시간을 기준으로 대상 페이지를 선정하므로 LRU 페이지 교체 알고리즘의 한 방식으로 분류된다
 
-![Untitled](%E1%84%91%E1%85%A6%E1%84%8B%E1%85%B5%E1%84%8C%E1%85%B5%20%E1%84%80%E1%85%AD%E1%84%8E%E1%85%A6%20%E1%84%8B%E1%85%A1%E1%86%AF%E1%84%80%E1%85%A9%E1%84%85%E1%85%B5%E1%84%8C%E1%85%B3%E1%86%B7%20b8d8756395d54688901169e0df2fdeb1/Untitled%208.png)
-
+![page9.png](./image/page9.png)
 </aside>
 
 ### 반도 기반=계수 기반(Counting-****************************************Based)페이지 교체****************************************
@@ -145,8 +143,7 @@ LRU,LFU,NUR > SCR(2차 기회 알고리즘) > FIFO
 
 - 참조 횟수가 적은 페이지가 최근에 사용된 것이기 때문에 앞으로 사용될 가능성이 높다는 판단
 
-![Untitled](%E1%84%91%E1%85%A6%E1%84%8B%E1%85%B5%E1%84%8C%E1%85%B5%20%E1%84%80%E1%85%AD%E1%84%8E%E1%85%A6%20%E1%84%8B%E1%85%A1%E1%86%AF%E1%84%80%E1%85%A9%E1%84%85%E1%85%B5%E1%84%8C%E1%85%B3%E1%86%B7%20b8d8756395d54688901169e0df2fdeb1/Untitled%209.png)
-
+![page10.png](./image/page10.png)
 <aside>
 💡 LFU와 MFU가 실제 사용에 잘 쓰이지 않는 이유
 
@@ -163,7 +160,7 @@ LRU,LFU,NUR > SCR(2차 기회 알고리즘) > FIFO
     LRU 알고리즘을 따라 가장 오래 사용되지 않은 페이지로 교체
     
 
-![Untitled](%E1%84%91%E1%85%A6%E1%84%8B%E1%85%B5%E1%84%8C%E1%85%B5%20%E1%84%80%E1%85%AD%E1%84%8E%E1%85%A6%20%E1%84%8B%E1%85%A1%E1%86%AF%E1%84%80%E1%85%A9%E1%84%85%E1%85%B5%E1%84%8C%E1%85%B3%E1%86%B7%20b8d8756395d54688901169e0df2fdeb1/Untitled%2010.png)
+ ![page11.png](./image/page11.png)
 
 - 문제점
     
@@ -172,7 +169,7 @@ LRU,LFU,NUR > SCR(2차 기회 알고리즘) > FIFO
     -앞으로 사용하지 않아도 초기에 사용된 참조횟수가 높아 메모리에 계속 남아있다
     
 
-![Untitled](%E1%84%91%E1%85%A6%E1%84%8B%E1%85%B5%E1%84%8C%E1%85%B5%20%E1%84%80%E1%85%AD%E1%84%8E%E1%85%A6%20%E1%84%8B%E1%85%A1%E1%86%AF%E1%84%80%E1%85%A9%E1%84%85%E1%85%B5%E1%84%8C%E1%85%B3%E1%86%B7%20b8d8756395d54688901169e0df2fdeb1/Untitled%2011.png)
+![page12.png](./image/page12.png)
 
 ### Random 기반
 
