page fault nru image

--- a/OS/페이지 교체 알고리즘.md
+++ b/OS/페이지 교체 알고리즘.md
@@ -70,7 +70,7 @@ LRU,LFU,NUR > SCR(2차 기회 알고리즘) > FIFO
 - SCR와 차이점 : 원형 큐 사용
 - 대상 페이지를 가리키는 포인터가 큐의 맨 바닥으로 내려가면 다음에는 다시 큐의 처음을 가리키는데, 시계처럼 한 방향으로 돈다
 
-![page3.png](./image/page3.png)
+![페이지폴트_NRU](./image/페이지폴트_NRU.png)
 
 - 참조 비트 : 페이지가 참조되지 않았을 때는 0, 호출되었을 때는 1로 지정
 - 변형 비트 : 페이지 내요이 변경되지 않았을 때는 0, 변경되었을 때는 1로 지정
