--- a/OS/캐시_지역성.md
+++ b/OS/캐시_지역성.md
@@ -89,6 +89,10 @@ N개 이상 블록으로 구성된 집합방식 = N-방향 집합 연관 사상
 
 프로세스가 수행될 때 나타나는 지역성을 응용해서, 캐시 메모리에서 변화된 캐시의 내용을 주기억장치에 기록하는 방법
 
+서비스 특성에 따라 어떤 정책을 쓸지 결정함.
+
+캐시 구현 예제 ➡️ [Google Guava Cache](https://wnsgml972.github.io/database/2020/12/13/Caching/)
+
 ### 1) Write-Through
 
 - 쓰기 동작이 이뤄질 때마다 캐시 메모리와 주기억장치의 내용을 동시에 갱신하는 방식
@@ -96,6 +100,7 @@ N개 이상 블록으로 구성된 집합방식 = N-방향 집합 연관 사상
 - 모든 쓰기 동작이 주기억장치에 쓰는 동작을 포함하므로, 쓰기 동작에 걸리는 시간이 길다.
     - 이를 방지하기 위해  Write buffer를 추가하는 방식이있음(Write-back에서도 사용)
 - 데이터 loss가 발생하면 안되는 상황에서 사용
+- write-through 정책을 사용하는 서비스 예) AWS DynamoDB Accelerator(DAX) : 
 
 ### 2) Write-Back
 
@@ -158,3 +163,4 @@ N개 이상 블록으로 구성된 집합방식 = N-방향 집합 연관 사상
 - [책]2023수제비 전자계산기조직응용기사 실기책
 - [https://milkcaramel66.tistory.com/33](https://milkcaramel66.tistory.com/33)
 - [책]면접을 위한 CS전공지식 노트
+- [write-through](https://wnsgml972.github.io/database/2020/12/13/Caching/)
