file system ver2

--- a/OS/파일시스템.md
+++ b/OS/파일시스템.md
@@ -14,7 +14,7 @@
 - 운영체제와 모든 데이터, 프로그램의 저장과 접근을 위한 기법을 제공하는것.
 - 시스템 내의 모든 파일에 관한 정보를 제공하는 계층적 디렉리 구조이고, 파일, 메타데이터, 디렉터리 정보 등을 관리함.
 
-### Directory (아래로 링크 달기)
+### [Directory](#2-directory)
 
 - 파일을 관리하기 위한 특별한 형태의 파일
 
@@ -45,7 +45,7 @@
 ## 1) 순차 접근/순차파일 (Sequential File/Access)
 
 - 입력된 레코드(Data)를 논리적 순서에 따라 물리적 연속 공간에 순서대로 기록
-- 물리적 순서 = 논리적순서 (아무튼 순서가 있다! 힙파일과 궂분)
+- 물리적 순서 = 논리적순서 (아무튼 순서가 있다! [힙파일](#4-힙-파일-heap-file)과 구분)
 - 카세트 데이프처럼 현재 위치에서 읽거나 쓰면 offset이 자동으로 증가하고, 뒤로 돌아가기 위해선 되감기가 필요.
 - 검색 및 삽입 시 순차적으로 하므로 ➡️ 효율이 낮음(오래걸리고, 순서고려 필요)
 - 삭제 시 주기적으로 재구성이 필요하다.
