--- a/DB/관계_키.md
+++ b/DB/관계_키.md
@@ -23,13 +23,25 @@
 - UML : 연관관계, 의존관계 (실선과 점선으로 표기 구분)
 - *UML : Unified Modeling Language, 시스템 개발과정에서 개발자간의 의사소통을 원할하게 이루어지게 하기 위해 표준화한 모델링 언어. 소프트웨어 시스템, 업무 모델링, 시스템의 산출물을 규정하고 시각화, 문서화 하는 언어. ([https://velog.io/@hanblueblue/UML-UML-기초](https://velog.io/@hanblueblue/UML-UML-%EA%B8%B0%EC%B4%88))
 
-| 존재에 따른 분류 | 엔터티 간의 상태를 의미.
-ERD : 존재/행위 단일화된 표기법
-UML : 연관관계, 실선 표현 | 소속한다 |
-| --- | --- | --- |
-| 행위에 따른 분류 | 엔터티간의 행위를 의미
-ERD : 존재/행위 단일화된 표기법
-UML : 의존관계, 점선 표현 | 주문한다. |
+<table>
+    <th>분류</th>
+    <th>설명</th>
+    <th>예시</th>
+    <tr>
+        <td>존재에 따른 분류</td>
+        <td>엔터티 간의 상태를 의미.<br>
+            ERD : 존재/행위 단일화된 표기법<br>
+            UML : 연관관계, 실선 표현</td>
+        <td>소속한다</td>
+    </tr>
+    <tr>
+        <td>행위에 따른 분류</td>
+        <td>엔터티간의 행위를 의미<Br>
+        ERD : 존재/행위 단일화된 표기법<br>
+        UML : 의존관계, 점선 표현</td>
+        <td>주문한다</td>
+    </tr>
+</table>
 
 ## 표기법(ERD)
 
@@ -123,12 +135,31 @@ UML : 의존관계, 점선 표현 | 주문한다. |
 
 - 식별자 개념은 엔터티와 키 사이 어딘가… 필요할시 내용 추가할 것 여기서는 식별자 특성만 알고 있으면 된다!
 
-| 특징 | 내용 | 예시 |
-| --- | --- | --- |
-| 유일성 | 주식별자에 의해 엔터티내의 모든 인스턴스들을 유일하게 구분함 | 사원번호가 모든 직원에게 개인별로 고유하게 부 |
-| 최소성 | 주식별자를 구성하는 속성의 수는 유일성을 만족하는 최소의 수가 되어야함 | 사원분류코드+사원번호를 식별자를 구성하면, 사원번호만으로도 식별가능 하므로 부적절한 구조 |
-| 분변성 | 주식별자가 한 번 특정 엔터티에 지정되면 그 식별자의 값은 변하지 않아야 함 | 사원번호가 바뀌면 안됨 |
-| 존재성 | 주식별자가 지정되면 반드시 데이터 값이 존재(Null 안됨) | 사원번호 없는 직원은 있을 수 없음 |
+<table>
+    <th>특징</th>
+    <th>내용</th>
+    <th>예시</th>
+    <tr>
+        <td>유일성</td>
+        <td>주식별자에 의해 엔터티내의 모든 인스턴스들을 유일하게 구분함</td>
+        <td>사원번호가 모든 직원에게 개인별로 고유하게 부여됨</td>
+    </tr>
+     <tr>
+        <td>최소성</td>
+        <td>주식별자를 구성하는 속성의 수는 유일성을 만족하는 최소의 수가 되어야함</td>
+        <td>사원분류코드+사원번호를 식별자를 구성하면, 사원번호만으로도 식별가능 하므로 부적절한 구조</td>
+    </tr>
+     <tr>
+        <td>불변성</td>
+        <td>주식별자가 한 번 특정 엔터티에 지정되면 그 식별자의 값은 변하지 않아야 함</td>
+        <td>사원번호가 바뀌면 안됨</td>
+    </tr>
+     <tr>
+        <td>존재성</td>
+        <td>주식별자가 지정되면 반드시 데이터 값이 존재(Null 안됨) </td>
+        <td>사원번호 없는 직원은 있을 수 없음</td>
+    </tr>
+</table>
 
 ## 기본키(Primary Key)
 
