--- a/DB/관계_키.md
+++ b/DB/관계_키.md
@@ -141,22 +141,22 @@
     <th>예시</th>
     <tr>
         <td>유일성</td>
-        <td>주식별자에 의해 엔터티내의 모든 인스턴스들을 유일하게 구분함</td>
-        <td>사원번호가 모든 직원에게 개인별로 고유하게 부여됨</td>
+        <td>주식별자에 의해 엔터티내의<br>모든 인스턴스들을 유일하게 구분함</td>
+        <td>사원번호가 모든 직원에게 개인별로<br>고유하게 부여됨</td>
     </tr>
      <tr>
         <td>최소성</td>
-        <td>주식별자를 구성하는 속성의 수는 유일성을 만족하는 최소의 수가 되어야함</td>
-        <td>사원분류코드+사원번호를 식별자를 구성하면, 사원번호만으로도 식별가능 하므로 부적절한 구조</td>
+        <td>주식별자를 구성하는 속성의 수는<br>유일성을 만족하는 최소의 수가 되어야함</td>
+        <td>사원분류코드+사원번호를 식별자를 구성하면,<br>사원번호만으로도 식별가능 하므로 부적절한 구조</td>
     </tr>
      <tr>
         <td>불변성</td>
-        <td>주식별자가 한 번 특정 엔터티에 지정되면 그 식별자의 값은 변하지 않아야 함</td>
+        <td>주식별자가 한 번 특정 엔터티에 지정되면<br>그 식별자의 값은 변하지 않아야 함</td>
         <td>사원번호가 바뀌면 안됨</td>
     </tr>
      <tr>
         <td>존재성</td>
-        <td>주식별자가 지정되면 반드시 데이터 값이 존재(Null 안됨) </td>
+        <td>주식별자가 지정되면 반드시 데이터 값이 존재<br>(Null 안됨) </td>
         <td>사원번호 없는 직원은 있을 수 없음</td>
     </tr>
 </table>
