--- a/OS/프로세스의 개념, 상태, 멀티 프로세스.md
+++ b/OS/프로세스의 개념, 상태, 멀티 프로세스.md
@@ -40,9 +40,15 @@ PCB는 Context Switching 시 사용되는데, CPU 가 여러 프로세스를 빠
 ![프로세스_상태전이도.jpg](./image/process_3.jpg)
 
 1. **생성** - 사용자의 요청에 의해 PCB가 생성이 되고, 프로세스가 메인 메모리에 적재되어 실행 준비를 마친 상태
-2. **준비** - 프로세스가 CPU를 얻을 때까지 자신의 차례를 기다리는 상태 (= ReadyQueue에 들어와 있는 상태) **ReadyQueue 추가설명 (준비/대기 차이)**
+2. **준비** - 프로세스가 CPU를 얻을 때까지 자신의 차례를 기다리는 상태 (= ReadyQueue에 들어와 있는 상태) 
 3. **실행** - ReadyQueue에 있던 프로세스가 자신의 차례를 부여받아 실제로 수행되는 상태
-4. **대기** - 프로세스가 실행되다가 입출력 처리를 요청하거나, 바로 확보될 수 없는 자원을 요청하면 CPU를 양도하고 요청한 일이 완료되기를 기다림
+4. **대기** - 프로세스가 실행되다가 입출력 처리를 요청하거나, 바로 확보될 수 없는 자원을 요청하면 CPU를 양도하고 요청한 일이 완료되기를 기다림 (= DeviceQueue에 들어와 있는 상태)
+![](./image/process_4.png)
+```java
+준비 큐(ReadyQueue) = CPU 할당을 대기 중인 프로세스
+대기 큐(DeviceQueue) = 입출력 장치 할당을 대기 중인 프로세스
+```
+
 5. **종료** - 프로세스가 자신의 작업을 모두 마친 뒤, 운영체제가 PCB를 제거하고 메인 메모리에서 빠져나간 상태
 ---
 2→3  **디스패치** - ReadyQueue의 맨 앞에 있던 프로세스가 CPU를 점유하게 되는 것
@@ -89,8 +95,8 @@ PCB는 Context Switching 시 사용되는데, CPU 가 여러 프로세스를 빠
 
 [https://velog.io/@mingadinga_1234/프로세스란-프로세스의-상태](https://velog.io/@mingadinga_1234/%ED%94%84%EB%A1%9C%EC%84%B8%EC%8A%A4%EB%9E%80-%ED%94%84%EB%A1%9C%EC%84%B8%EC%8A%A4%EC%9D%98-%EC%83%81%ED%83%9C)
 
-[https://enlqn1010.tistory.com/30](https://enlqn1010.tistory.com/30)
-
+[https://enlqn1010.tistory.com/30](https://enlqn1010.tistory.com/30)   
+   
 ---
 
 [https://livenow14.tistory.com/67](https://livenow14.tistory.com/67)
