--- a/OS/가상메모리.md
+++ b/OS/가상메모리.md
@@ -32,7 +32,12 @@
 - 가상 메모리 시스템에서는 **운영체제 영역을 제외한 나머지 영역을 일정한 크기로 나누어서 프로세스에게 할당**
 → 가변 분할 방식과(세그멘테이션) 고정 분할 방식(페이징)으로 나뉨
 → 세그멘테이션은 외부 단편화문제. 페이징은 내부 단편화문제와 같은 단점이 존재함
-- **MMU(Memory map)** - 가상 주소를 실제 주소로 변환해주는 하드웨어 장치로, 작업 부하를 낮추기 위해 페이지 단위로 데이터를 처리함
+```java
+page table(매핑 테이블) - 가상 주소와 실제 주소가 매핑되어 있는 테이블 (주로 메모리에 있지만, 운영체제마다 다름)
+MMU(메모리 관리 장치, Memory Management Unit) - CPU가 메모리에 접근하는 것을 관리하는 컴퓨터 하드웨어 부품으로, 가상 메모리 주소를 실제 메모리 주소로 변환함
+    즉, 가상주소가 물리주소로 변환되어야 할 때, TLB라는 캐시에서 우선 검색되고, TLB에 없을 경우 페이지 테이블에서 매핑이 존재하는지 찾음
+    페이지 테이블에도 없으면 디스크에서 찾음 
+```
 
 <br></br>
 
