--- a/OS/가상메모리.md
+++ b/OS/가상메모리.md
@@ -1,5 +1,4 @@
 # 가상 메모리
-
 ## 개념
 
 메인 메모리는 CPU가 직접 접근할 수 있는 기억장치로, 프로세스가 실행되려면 프로그램 코드를 메인 메모리에 적재해두어야 함 
@@ -68,6 +67,10 @@ CPU가 해당 페이지를 요구할 때까지 그 페이지를 메모리에 올
 
 ![virtual_memory_6.png](./image/virtual_memory_6.png)
 
+> **트랩**     
+> 어떤 프로세스가 특정 시스템 기능을 사용하려고 할 때, 그 기능을 운영체제에게 요청하는 방법
+> 트랩과 인터럽트의 개념은 유사하지만, 인터럽트는 하드웨어적인 용어이고 트랩은 소프트웨어적인 용어임 
+
 - Page 접근 시 valid-invalid부터 확인함
 - valid시 페이지에 접근함, invalid시 page fault가 발생
     - 만약 무효한 페이지에 대한 참조라면, 프로세스가 중단됨
@@ -78,10 +81,46 @@ CPU가 해당 페이지를 요구할 때까지 그 페이지를 메모리에 올
     - 트랩에 의해 중단되었던 명령어를 다시 수행함
 
 <br></br>
+
+## 스레싱 (thrashing)
+![](./image/virtual_memory_7.png)
+**페이지 폴트가 많이 발생하여, CPU 이용률이 급격히 떨어지는 현상**
+-> CPU 이용률이 낮다는 것은, 메모리에 올라와 있는 프로세스의 수가 너무 적어 프로세스가 모두 I/O 작업을 함으로써 준비 큐가 비는 현상  
+-> CPU 이용률이 낮으면 운영체제는 메모리에 올라가는 프로세스의 수(MPD, 다중 프로그래밍의 정도)를 늘리게 됨 
+<br></br>
+### 스레싱 발생 원인
+1. 운영체제는 CPU 이용률이 낮으면 MPD를 높임
+2. 과도하게 MPD가 높아지면 각 프로세스에게 할당되는 메모리의 양이 감소하게 됨 (많은 프로세스에게 메모리를 할당해줘야 하므로)
+3. 각 프로세스는 수행에 필요한 최소한의 메모리도 할당받지 못하게 되며, 페이지 폴트가 빈번하게 발생하게 됨
+4. 페이지 폴트가 발생하면 스왑 영역에서 해당 페이지를 메모리로 가져오기 위해 디스크 I/O 작업이 발생하고, 문맥교환을 통해 다른 프로세스에게 CPU가 이양됨
+5. CPU를 받은 다른 프로세스들도 페이지 폴트가 발생하며, 시스템은 페이지 폴트를 처리하느라 분주해지고 CPU 이용률은 급격히 감소함
+6. 이러한 상황에서 운영체제는 메모리에 올라와 있는 프로세스의 수가 적어 이러한 현상이 발생했다고 판단하고, MPD를 높여 또 다른 프로세스를 메모리에 추가함
+7. 악순환!!!!!
+   
+<br></br>
+
+### 해결방법
+MPD를 적절히 조절하여 CPU 이용률을 높여 스레싱이 발생하는 것을 방지해야 함  
+
+**1. 워킹셋 알고리즘**      
+프로세스는 일정 시간 동안 집중적으로 특정 주소 영역을 참조하는 경향이 있는데, 이를 **지역성 집합**이라고 함       
+워킹셋 알고리즘은 지역성 집합이 메모리에 동시에 올라갈 수 있도록 보장하는 메모리 관리 알고리즘       
+-> 프로세스의 워킹셋(한꺼번에 메모리에 올라가야 하는 페이지들의 집합)을 구성하는 페이지들이 한꺼번에 올라갈 수 있을 메모리 공간이 있을 때만 동작함      
+   공간이 없으면 기존 메모리에 존재하는 안쓰는 페이지를 디스크로 스왑 아웃 시켜 공간을 확보함)      
+<br></br>
+**2. 페이지 부재 빈도 알고리즘**     
+각 프로세스의 페이지 폴트율을 주기적으로 조사하고 이 값에 근거해서 각 프로세스에 할당할 메모리 양을 동적으로 조절하는 알고리즘      
+시스템이 미리 정해 놓은 상한값을 넘어가거나 하한값 이하로 페이지 폴트율이 떨어지게 되면, 운영체제가 메모리에 올라가 있는 프로세스의 수를 조절하게 됨     
+![](./image/virtual_memory_8.png)
+
+<br></br>
 <br></br>
 
 ### 출처
 [https://velog.io/@kyungwoon/TIL-항해99-가상메모리가-뭐죠](https://velog.io/@kyungwoon/TIL-%ED%95%AD%ED%95%B499-%EA%B0%80%EC%83%81%EB%A9%94%EB%AA%A8%EB%A6%AC%EA%B0%80-%EB%AD%90%EC%A3%A0)   
 [https://ko.wikipedia.org/wiki/가상_메모리](https://ko.wikipedia.org/wiki/%EA%B0%80%EC%83%81_%EB%A9%94%EB%AA%A8%EB%A6%AC)   
 [https://marmelo12.tistory.com/371](https://marmelo12.tistory.com/371)   
-[https://luv-n-interest.tistory.com/478](https://luv-n-interest.tistory.com/478)   
+[https://luv-n-interest.tistory.com/478](https://luv-n-interest.tistory.com/478)     
+https://about-myeong.tistory.com/35    
+https://ko.wikipedia.org/wiki/%ED%8A%B8%EB%9E%A9_(%EC%BB%B4%ED%93%A8%ED%8C%85)    
+https://zangzangs.tistory.com/144
