update register and cache

--- a/OS/캐시_지역성.md
+++ b/OS/캐시_지역성.md
@@ -12,7 +12,11 @@
     
 - SRAM vs SDRAM 간단 비교(➡️RAM 종류)
     - SRAM(Static RAM) : 플립플롭으로 이뤄짐, 소비전력⬆️집적도⬇️가격⬆️, 대용량으로 할 필요는 없지만 빠른 속도가 필요할때.
-    - SDRAM(Synchronous Dynamic RAM) :  커패시터 이용, 제어장치 입력을 clk 펄스와 동시에 일어나도록함(동기식), = 클럭마다 cpu와 정보를 주고받는 DRAM(대용량, 집적도⬆️, 가격⬇️, 주기억)
+    - SDRAM(Synchronous Dynamic RAM) :  커패시터 이용, 제어장치 입력을 clk 펄스와 동시에 일어나도록함(동기식), = 클럭마다 cpu와 정보를 주고받는 DRAM
+    - DRAM : 대용량, 집적도⬆️, 가격⬇️, 주기억에 사용
+    - 2002년도 이전 컴퓨터들은 주로 주기억 장치로 SDRAM을 사용했지만 현재는 DDR(Double Data Rate Synchronous Ram)을 많이 사용함.
+    - 주기억장치는 크게 보면 DRAM방식이고, 시대 변천에 따라 SDRAM > DDR > DDR2 > ... > DDR5 등으로 발전하는 거라고 생각하면 됨.
+
 
 ## B. 동작원리
 
