--- a/OS/엔티티,릴레이션,속성,도메인,필드와 레코드.md
+++ b/OS/엔티티,릴레이션,속성,도메인,필드와 레코드.md
@@ -50,7 +50,7 @@ ex) 속성 : 성별 → 도메인 : {남,여}
 
 - 필드 : 엔티티의 속성들
 - 레코드(튜플) : 속성들의 도메인들이 모인 하나의 row
-![field&record.png](./image/field&record.png)
+![fieldrecord.png](./image/fieldrecord.png)
 
 > 출처
 > 
