--- a/DB/엔티티,릴레이션,속성,도메인,필드와 레코드.md
+++ b/DB/엔티티,릴레이션,속성,도메인,필드와 레코드.md
@@ -51,7 +51,7 @@ ex) 속성 : 성별 → 도메인 : {남,여}
 - 필드 : 엔티티의 속성들
 - 레코드(튜플) : 속성들의 도메인들이 모인 하나의 row
 
-![Untitled](%E1%84%8B%E1%85%A6%E1%86%AB%E1%84%90%E1%85%B5%E1%84%90%E1%85%B5,%E1%84%85%E1%85%B5%E1%86%AF%E1%84%85%E1%85%A6%E1%84%8B%E1%85%B5%E1%84%89%E1%85%A7%E1%86%AB,%E1%84%89%E1%85%A9%E1%86%A8%E1%84%89%E1%85%A5%E1%86%BC,%E1%84%83%E1%85%A9%E1%84%86%E1%85%A6%E1%84%8B%E1%85%B5%E1%86%AB,%E1%84%91%E1%85%B5%E1%86%AF%E1%84%83%E1%85%B3%E1%84%8B%E1%85%AA%20%E1%84%85%E1%85%A6%E1%84%8F%E1%85%A9%E1%84%83%E1%85%B3%2051969d7b3f5a406abd76351efa645499/Untitled.png)
+![fieldrecord.png](./image/fieldrecord.png)
 
 > 출처
 > 
