--- a/OS/메모리단편화.md
+++ b/OS/메모리단편화.md
@@ -133,16 +133,32 @@ ex) 디스크 조각 모음
 ## 5. 메모리 풀(Memory pool)
 
 - 내부 단편화, 외부 단편화 해결
+  
+![memeorypool.jpg](./image/memorypool.jpg)
 
 : 필요한 메모리 공간을 필요한 크기, 개수만큼 사용자가 직접 지정하여 미리 할당받아 놓고 필요할 때마다 사용하고 반납하는 기법
 
-- 메모리 풀 없이 동적할당과 해제를 반복하면 메모리의 랜덤한(실제로는 알고리즘에 의한) 위치에 할당과 해제가 반복되면서 단편화를 일으킬 수 있겠지만 미리 공간을 할당해놓고 가져다 쓰고 반납하기 때문에 할당과 해제로 인한 외부 단편화가 발생하지 않는다.
-- 또한 필요한 크기만큼 할당을 해놓기 때문에 내부 단편화 또한 생기지 않는다.
-- 하지만 메모리 단편화로 인한 메모리 낭비량보다 메모리 풀을 만들었지만 쓰지 않았을 때 메모리 양이 커질 경우 사용하지 않아야 한다.
-- 메모리의 할당, 해제가 잦은 경우에 메모리 풀을 쓰면 효과적이다.
-- 미리 할당해놓고 사용하지 않는 순간에도 계속 할당해놓으므로 메모리 누수가 있는 방식이다.
+- 이런 동적할당 방식은 데이터를 위한 메모리 공간을 만들어주는 건데 그 공간 전체를 메모리 풀이라고 생각하면 된다.
+- 동적할당은 RAM의 힙영역을 사용한다.(힙영역에서 따로 구분되어 있다.)
 
-- 구현 방법
+#### 메모리풀을 사용하는 이유
+- 메모리 풀 없이 동적할당과 해제를 반복하면 메모리의 랜덤한(실제로는 알고리즘에 의한) 위치에 할당과 해제가 반복되면서 단편화를 일으킨다.
+- 하지만 미리 공간을 할당해놓고 가져다 쓰고 반납하기 때문에 할당과 해제로 인한 외부 단편화가 발생하지 않는다.
+- 또한 필요한 크기만큼 할당을 해놓기 때문에 내부 단편화 또한 생기지 않는다.
+- **하지만 메모리 단편화로 인한 메모리 낭비량보다 메모리 풀을 만들었지만 쓰지 않았을 때 메모리 양이 커질 경우 사용하지 않아야 한다.**
+- 
+- 메모리의 할당, 해제가 잦은 경우에 메모리 풀을 쓰면 효과적이다.
+- 단점 : 미리 할당해놓고 사용하지 않는 순간에도 계속 할당해놓으므로 메모리 누수가 있는 방식이다.
+- ps) 요즘에는 기술이 발전해서 malloc()이나 new()를 사용해 생기는 메모리 단편화는 신경쓸 정도는 아니다.
+- 동적할당=성능저하, 하지만 메모리 풀을 사용하므로써 성능향상
+- 
+  >-  C++기준에서 new()의 동적할당은 메모리할당(c의 malloc()), 생성자 호출, 가상함수 목록 설정의 일을 한다.
+  >   메모리 풀을 사용하면 메모리할당을 확살하게 줄일 수 있다.
+  >- 풀에서 메모리 할당 시 객체 타입으로 operator new를 호출하면 세 가지를 다하고, 필요한 바이트들만 할당 받으면 메모리 할당만 하게 된다.
+  >- 메모리 할당은 시스템콜로 하는데, 운영체제와 상호작용하여 유효한 메모리를 할당받는다 . -> 이과정에 소요하는 cpu비용이 큼.
+  >- 하지만 한 번의 시스템 콜로 메모리를 풀에 미리 할당 받으면, 풀에서 메모리를 꺼낼 때는 시스템콜이 발생하지 않으므로 cpu가 훨씬 적은 동작을 해 성능이 향상된다.
+
+#### 구현 방법
     1. 큰 메모리블록(페이지)을 힙으로부터 할당
     2. 할당 받은 페이지를 각 객체의 크기의 블록으로 나눔
     3. 각 객체를 위한 블록을 순차적으로 링크
@@ -151,18 +167,19 @@ ex) 디스크 조각 모음
     6. 할당이 일어난 후 헤더 포인터는 할당 직전에 가리키던 블록이 가리키던 블록을 가리킨다.
     7. 사용되던 메모리가 해제되어 메모리 풀로 돌아올 경우 헤더 포인터는 그 블록을 가리키고 방금 전까지 헤더 포인터가 가리키던 블록을 돌아온 블록의 다음 포인터가 가리키게 한다.
 
-> 출저
-> 
-
-[https://jeong-pro.tistory.com/91](https://jeong-pro.tistory.com/91)
-
-[https://cocoon1787.tistory.com/859](https://cocoon1787.tistory.com/859)
-
-[https://velog.io/@hanhs4544/메모리-단편화Memory-Fragmentation](https://velog.io/@hanhs4544/%EB%A9%94%EB%AA%A8%EB%A6%AC-%EB%8B%A8%ED%8E%B8%ED%99%94Memory-Fragmentation)
-
-[https://bellog.tistory.com/159](https://bellog.tistory.com/159)
-
-> 면접 질문
-> 
+#### 유사 개념 : 오브젝트 풀 Object Pool
+- 할당된 메모리 자체로는 작업을 할 수 없음. 메모리에 객체=의미있는 데이터를 써놓아야 활용할 수 있음 = 객체 생성
+- 오브젝트 풀은 이미 "생성되어 있는 객체"를 반환하고, 메모리 풀은 "생성에 필요한 메모리"를 반환하도록 만들어진다.
+- 메모리 풀이 오브젝트 풀의 상위 개념이다.
+- 자유도는 메모리 풀이 높지만, 구현이 간편한 것은 오브젝트 풀. = 메모리 확보와 객체 생성을 분리할 필요가 없으므로
+---
+## 출처
+- [https://jeong-pro.tistory.com/91](https://jeong-pro.tistory.com/91)
+- [https://cocoon1787.tistory.com/859](https://cocoon1787.tistory.com/859)
+- [https://velog.io/@hanhs4544/메모리-단편화Memory-Fragmentation](https://velog.io/@hanhs4544/%EB%A9%94%EB%AA%A8%EB%A6%AC-- %EB%8B%A8%ED%8E%B8%ED%99%94Memory-Fragmentation)
+- [https://bellog.tistory.com/159](https://bellog.tistory.com/159)
+- [https://blog.naver.com/ruvendix/221333044853](https://blog.naver.com/ruvendix/221333044853)
+- [https://jartlife.tistory.com/59](https://jartlife.tistory.com/59)
+## 면접 질문
 1. 메모리 단편화란 무엇인가요?
 2. 페이징과 세그먼테이션의 차이점에 대해 알려주세요
