relations and key image update2

--- a/DB/관계_키.md
+++ b/DB/관계_키.md
@@ -77,7 +77,7 @@
     - **이 중 phone_id는 외래키(foreign key)로써, Phonebook 테이블의 ID 와 연결되어 있다.**
     - **Phonebook 테이블은 ID와 phone_number를 가지고 있다.각 전화번호가 단 한 명의 유저와 연결되어 있고, 그 반대도 동일하다면, Users 테이블과 Phonebook 테이블은 1:1 관계(One-to-one relationship)이다**
     
-    ![테이블-1-1-관계.jpg](./image/RK_1_1R.jpg)
+    ![테이블-1-1-관계.jpg](./image/RK_1_1Rmodified.jpg)
 
 ### 1:N 관계
 
