Update 운영체제의 개념 및 특징.md

--- a/OS/운영체제의 개념 및 특징.md
+++ b/OS/운영체제의 개념 및 특징.md
@@ -8,8 +8,7 @@
 
 윈도우(Windows), 맥 OS(Mac OS), 리눅스(Linux), 유닉스(Unix) 등
 
-![Untitled](%E1%84%8B%E1%85%AE%E1%86%AB%E1%84%8B%E1%85%A7%E1%86%BC%E1%84%8E%E1%85%A6%E1%84%8C%E1%85%A6%E1%84%8B%E1%85%B4%20%E1%84%80%E1%85%A2%E1%84%82%E1%85%A7%E1%86%B7%20%E1%84%86%E1%85%B5%E1%86%BE%20%E1%84%90%E1%85%B3%E1%86%A8%E1%84%8C%E1%85%B5%E1%86%BC%20ce4ad88edc1f4fd890340b467418f450/Untitled.png)
-
+![os6.png](./image/os6.png)
 ## 역할 및 목적
 
 - 자원 관리 및 보호 - 프로그램이나 다른 사용자가 데이터를 삭제하거나 중요 파일에 접근하지 못하게 컴퓨터 자원들을 보호
@@ -25,14 +24,12 @@
 4. 부트 로더는 하드디스크에 저장되어 있는 운영체제를 찾아서 RAM에 가지고 옴
 5. 운영체제가 종료하는 시점은 컴퓨터의 전원이 꺼지는 시점
 
-![Untitled](%E1%84%8B%E1%85%AE%E1%86%AB%E1%84%8B%E1%85%A7%E1%86%BC%E1%84%8E%E1%85%A6%E1%84%8C%E1%85%A6%E1%84%8B%E1%85%B4%20%E1%84%80%E1%85%A2%E1%84%82%E1%85%A7%E1%86%B7%20%E1%84%86%E1%85%B5%E1%86%BE%20%E1%84%90%E1%85%B3%E1%86%A8%E1%84%8C%E1%85%B5%E1%86%BC%20ce4ad88edc1f4fd890340b467418f450/Untitled%201.png)
-
+![os1.png](./image/os1.png)
 ## 구조
 
 커널과 명령어 해석기(Shell)로 나뉨
 
-![Untitled.png](%E1%84%8B%E1%85%AE%E1%86%AB%E1%84%8B%E1%85%A7%E1%86%BC%E1%84%8E%E1%85%A6%E1%84%8C%E1%85%A6%E1%84%8B%E1%85%B4%20%E1%84%80%E1%85%A2%E1%84%82%E1%85%A7%E1%86%B7%20%E1%84%86%E1%85%B5%E1%86%BE%20%E1%84%90%E1%85%B3%E1%86%A8%E1%84%8C%E1%85%B5%E1%86%BC%20ce4ad88edc1f4fd890340b467418f450/Untitled%202.png)
-
+![os2.png](./image/os2.png)
 ### 커널 Kernel
 
 - 운영체제가 수행하는 모든 것이 저장됨
@@ -62,15 +59,13 @@
 - 유사한 작업들끼리 일정량 또는 일정 시간 묶어서 처리하는 방식
 - 컴퓨터 시스템을 효율적으로 사용할 수 있지만, 하나의 작업이 모든 자원을 독점하므로 CPU 유휴 시간이 줄어듦
 
-![Untitled-2.png](%E1%84%8B%E1%85%AE%E1%86%AB%E1%84%8B%E1%85%A7%E1%86%BC%E1%84%8E%E1%85%A6%E1%84%8C%E1%85%A6%E1%84%8B%E1%85%B4%20%E1%84%80%E1%85%A2%E1%84%82%E1%85%A7%E1%86%B7%20%E1%84%86%E1%85%B5%E1%86%BE%20%E1%84%90%E1%85%B3%E1%86%A8%E1%84%8C%E1%85%B5%E1%86%BC%20ce4ad88edc1f4fd890340b467418f450/Untitled-2.png)
-
+![os3.png](./image/os3.png)
 ### 2. 다중 프로그래밍 시스템
 
 - 하나의 CPU와 주기억 장치(RAM)를 이용하여 여러 개의 프로그램을 동시에 처리하는 방식
 - CPU와 대화하면서 처리가 가능하여 CPU 사용률과 처리량이 증가함
 
-![Untitled-3.png](%E1%84%8B%E1%85%AE%E1%86%AB%E1%84%8B%E1%85%A7%E1%86%BC%E1%84%8E%E1%85%A6%E1%84%8C%E1%85%A6%E1%84%8B%E1%85%B4%20%E1%84%80%E1%85%A2%E1%84%82%E1%85%A7%E1%86%B7%20%E1%84%86%E1%85%B5%E1%86%BE%20%E1%84%90%E1%85%B3%E1%86%A8%E1%84%8C%E1%85%B5%E1%86%BC%20ce4ad88edc1f4fd890340b467418f450/Untitled-3.png)
-
+![os4.png](./image/os4.png)
 ### 3. 시분할 시스템 (= 대화형 시스템, Interactive 시스템)
 
 - 시간을 분할하여 여러 사용자들에게 컴퓨터 자원을 번갈아가며 할당하는 방식
@@ -79,8 +74,7 @@
 
 +) 라운드로빈 알고리즘 사용 
 
-![Untitled](%E1%84%8B%E1%85%AE%E1%86%AB%E1%84%8B%E1%85%A7%E1%86%BC%E1%84%8E%E1%85%A6%E1%84%8C%E1%85%A6%E1%84%8B%E1%85%B4%20%E1%84%80%E1%85%A2%E1%84%82%E1%85%A7%E1%86%B7%20%E1%84%86%E1%85%B5%E1%86%BE%20%E1%84%90%E1%85%B3%E1%86%A8%E1%84%8C%E1%85%B5%E1%86%BC%20ce4ad88edc1f4fd890340b467418f450/Untitled%203.png)
-
+![os5.png](./image/os5.png)
 ### 4. 실시간 시스템
 
 - 외부의 제어 대상으로부터 입력되는 데이터를 짧은 시간, 또는 특정시간 내에 결과를 출력하거나 응답
@@ -92,15 +86,14 @@
 - 여러 대의 CPU와 하나의 주기억장치를 이용하여 여러 개의 프로그램을 동시에 처리하는 방식
 - 단일 운영체제에 의해 관리되며, 하나의 CPU가 고장 나더라도 시스템의 신뢰성과 안정성 보장 가능
 
-![Untitled](%E1%84%8B%E1%85%AE%E1%86%AB%E1%84%8B%E1%85%A7%E1%86%BC%E1%84%8E%E1%85%A6%E1%84%8C%E1%85%A6%E1%84%8B%E1%85%B4%20%E1%84%80%E1%85%A2%E1%84%82%E1%85%A7%E1%86%B7%20%E1%84%86%E1%85%B5%E1%86%BE%20%E1%84%90%E1%85%B3%E1%86%A8%E1%84%8C%E1%85%B5%E1%86%BC%20ce4ad88edc1f4fd890340b467418f450/Untitled%204.png)
+![os6.png](./image/os6.png)
 
 ### 6. 분산 처리 시스템
 
 - 각 시스템은 자신의 운영체제와 메모리, 프로세스를 가지고 있어서 독립적으로 운영되지만, 필요할 때 서로 통신하는 시스템
 - 사용자의 접근을 제어하면서 CPU, 입출력장치 등 동시에 사용하는 자원을 편리하게 공유함
 
-![Untitled](%E1%84%8B%E1%85%AE%E1%86%AB%E1%84%8B%E1%85%A7%E1%86%BC%E1%84%8E%E1%85%A6%E1%84%8C%E1%85%A6%E1%84%8B%E1%85%B4%20%E1%84%80%E1%85%A2%E1%84%82%E1%85%A7%E1%86%B7%20%E1%84%86%E1%85%B5%E1%86%BE%20%E1%84%90%E1%85%B3%E1%86%A8%E1%84%8C%E1%85%B5%E1%86%BC%20ce4ad88edc1f4fd890340b467418f450/Untitled%205.png)
-
+![os7.png](./image/os8.png)
 ## 기능
 
 - 프로세스 관리 - OS에서 동시에 실행되는 많은 프로세스를 효율적으로 관리
