Update 스레드, 멀티 스레드.md

--- a/OS/스레드, 멀티 스레드.md
+++ b/OS/스레드, 멀티 스레드.md
@@ -25,7 +25,7 @@
 
 다수의 제어 스레드 —> 다중 스레드 모델
 
-![Untitled](%E1%84%89%E1%85%B3%E1%84%85%E1%85%A6%E1%84%83%E1%85%B3,%20%E1%84%86%E1%85%A5%E1%86%AF%E1%84%90%E1%85%B5%20%E1%84%89%E1%85%B3%E1%84%85%E1%85%A6%E1%84%83%E1%85%B3%20b3376533e08f425e8b82400632847426/Untitled.png)
+![thread1.png](./image/thread1.png)
 
 ## 단일 스레드
 
