Update 프로그램 실행 순서.md

--- a/OS/프로그램 실행 순서.md
+++ b/OS/프로그램 실행 순서.md
@@ -1,9 +1,8 @@
 # 프로그램 실행 순서
 
-![Untitled](%E1%84%91%E1%85%B3%E1%84%85%E1%85%A9%E1%84%80%E1%85%B3%E1%84%85%E1%85%A2%E1%86%B7%20%E1%84%89%E1%85%B5%E1%86%AF%E1%84%92%E1%85%A2%E1%86%BC%20%E1%84%89%E1%85%AE%E1%86%AB%E1%84%89%E1%85%A5%209692c341a9b04c468c2d7cb07f8d6a2f/Untitled.png)
+![program3.png](./image/program3.png)
 
-![Untitled](%E1%84%91%E1%85%B3%E1%84%85%E1%85%A9%E1%84%80%E1%85%B3%E1%84%85%E1%85%A2%E1%86%B7%20%E1%84%89%E1%85%B5%E1%86%AF%E1%84%92%E1%85%A2%E1%86%BC%20%E1%84%89%E1%85%AE%E1%86%AB%E1%84%89%E1%85%A5%209692c341a9b04c468c2d7cb07f8d6a2f/Untitled%201.png)
-
+![program1.png](./image/program1.png)
 ### 프로그램이 실행 파일을 만드는 과정
 
 1. 전처리기
@@ -22,7 +21,7 @@
 
 참조해야 할 함수와 라이브러리를 모아서 하나의 실행팡이로 만들어준다
 
-![Untitled](%E1%84%91%E1%85%B3%E1%84%85%E1%85%A9%E1%84%80%E1%85%B3%E1%84%85%E1%85%A2%E1%86%B7%20%E1%84%89%E1%85%B5%E1%86%AF%E1%84%92%E1%85%A2%E1%86%BC%20%E1%84%89%E1%85%AE%E1%86%AB%E1%84%89%E1%85%A5%209692c341a9b04c468c2d7cb07f8d6a2f/Untitled%202.png)
+![program2.png](./image/program2.png)
 
 ### 컴퓨터가 읽기 쉽게 된 파일이 CPU에 실행되는 과정
 
