--- a/OS/파일시스템.md
+++ b/OS/파일시스템.md
@@ -99,6 +99,7 @@
 - 검색 : 원하는 레코드를 찾으려면 모든 레코드를 순차적으로 접근해야함
 - 삭제 : 검색 후 삭제. 삭제된 레코드가 차지하던 공간을 재사용하지 않고 빈공간으로 남겨둔다. 좋은 성능을 유지하기 위해 주기적으로 빈공간을 회수하여 자유공간에 반환하는 재조직이 필요하다.
 - 질의에서 모든 레코드를 참조하고 접근 순서가 중요하지 않을 때 사용하면 효율적이다.
+- (heap : 무엇인가 차곡차곡 쌓아올린 더미 라는 뜻으로 힙파일이라고 이름 붙여짐)
 
 ## +5) 분할 파일
 
